# PC1-SahuaricoRamirez

./: Actividad1.md  CMakeLists.txt  README.md
bench/: benchmark.cpp
report/: coverage_report.md  optimization_report.md  profiling_report.md
src/: main.cpp  solution.cpp  solution.hpp
